--- a/index.html
+++ b/index.html
@@ -12,11 +12,29 @@
 <body>
     <div class="parent-container">
         Parent Container
-        <div class="child child1">Static</div>
-        <div class="child child2">Relative</div>
-        <div class="child child3">Absolute</div>
-        <div class="child child4">Fixed</div>
-        <div class="child child5">Sticky</div>
+        <div class="child static">Static</div>
+        <div class="child relative">Relative</div>
+        <div class="child absolute">Absolute</div>
+        <div class="child fixed">Fixed</div>
+        <div class="child sticky">Sticky</div>
+    </div>
+
+    <div class="display-container">
+        <div class="block-container">This is an example of block container. It spans full width of the page.</div>
+        <div class="block-container">This is an example of block container. It spans full width of the page.</div>
+        <div class="block-container">This is an example of block container. It spans full width of the page.</div>
+
+        <button class="inline-element">Inline Element</button>
+        <button class="inline-element">Inline Element</button>
+        <button class="inline-element">Inline Element</button>
+
+        <div class="inline-block">This is an example of how inline-block works</div>
+        <div class="inline-block">This is an example of how inline-block works</div>
+        <div class="inline-block">This is an example of how inline-block works</div>
+
+        <div class="float-container">
+            <div class="float-box">Box</div>
+        </div>
     </div>
 </body>
 
